vlib/v/checker/tests/invalid_string_cast_to_pointers_err.out
vlib/v/checker/tests/invalid_string_cast_to_pointers_err.vv:2:9: error: cannot cast string to `voidptr`
    1 | test := 'test'
    2 | println(voidptr(test))
      |         ~~~~~~~~~~~~~
    3 | println(byteptr(test))
    4 | println(charptr(test))
vlib/v/checker/tests/invalid_string_cast_to_pointers_err.vv:3:9: error: cannot cast string to `byteptr`
    1 | test := 'test'
    2 | println(voidptr(test))
    3 | println(byteptr(test))
      |         ~~~~~~~~~~~~~
    4 | println(charptr(test))
vlib/v/checker/tests/invalid_string_cast_to_pointers_err.vv:4:9: error: cannot cast string to `charptr`
    2 | println(voidptr(test))
    3 | println(byteptr(test))
    4 | println(charptr(test))
      |         ~~~~~~~~~~~~~
