vlib/v/checker/tests/invalid_string_cast_to_pointers_err.vv
test := 'test'
println(voidptr(test))
println(byteptr(test))
println(charptr(test))
